Changes, changes everywhere
Changelog:
- game.jsp now working (kind of)
- Improved SQL connection by connecting only once.
- This means that you only close the connection when you are done
processing the page.
- Close the ResultSet instead.

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//WebContent/admin/games-modal.jsp=UTF-8
 encoding//WebContent/admin/genres.jsp=UTF-8
+encoding//WebContent/game.jsp=UTF-8
