--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
   		<artifactId>commons-lang3</artifactId>
   		<version>3.4</version>
 	</dependency>
+<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>3.1.0</version>
+    </dependency>
   </dependencies>
   
   <build>
